ISP20240430 - FinalInspection  [Add defect Page] 增加最小寬度css

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -78,7 +78,7 @@
                     </h1>
                 </div>
             }
-            <table id="CheckListTable" class="cell-border" style="width:100%"></table>
+            <table id="CheckListTable" class="cell-border" style="width:100%;min-width:1300px;"></table>
         </div>
         <div style="width:100%">
             <input type="hidden" id="goPage" name="goPage">
