--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -161,7 +161,7 @@
                                 <label class="FindLab" for="TypeSP">Type</label>
                             </td>
                             <td colspan="2">
-                                @Html.DropDownListFor(o => o.Type, Model.TypeDatasource, new { id = "myDropdown" })
+                                @Html.DropDownListFor(o => o.Type, Model.TypeDatasource, new { id = "txtTypeID" })
                             </td>
                             <td>
                                 <label class="FindLab">Line</label>
@@ -173,7 +173,7 @@
                                 <label class="FindLab">SP</label>
                             </td>
                             <td colspan="3">
-                                @Html.TextBoxFor(o => o.SPNO, new { @value = Model.SPNO, @style = "width:9vw", @class = "myTextBox" })
+                                @Html.TextBoxFor(o => o.SPNO, new { @value = Model.SPNO, @style = "width:9vw", @class = "txtOrderID" })
                             </td>
                             <td style="padding: 0vw;">
                                 <input type="button" class="site-btn btn-gy font1rem Black" style="width: 7vw;" name="action:ToExcel" id="btnExcel" value="To Excel" />
@@ -729,6 +729,7 @@
         if ($("#SeasonID").val() != "") n++;
         if ($("#StyleID").val() != "") n++;
         if ($("#Article").val() != "") n++;
+        if ($("#SPNO").val() != "") n++;
         if ($("#Line").val() != "") n++;
         if ($("#ReceivedDate_sText").attr('disabled') == undefined && $("#ReceivedDate_sText").val() != "" && $("#ReceivedDate_eText").val() != "") n++;
         if ($("#ReportDate_sText").attr('disabled') == undefined &&$("#ReportDate_sText").val() != "" && $("#ReportDate_eText").val() != "") n++;
@@ -738,13 +739,13 @@
 
 
     $(document).ready(function () {
-        $('.myTextBox').blur(function () {
+        $('.txtOrderID').blur(function () {
             typeChange();
         });
     });
 
     function typeChange() {
-        var dropdown = document.getElementById("myDropdown");
+        var dropdown = document.getElementById("txtTypeID");
         var option = document.createElement("option");
         option.text = "All Type Testing";
         option.value = "All Type Testing";
@@ -755,7 +756,7 @@
 
         if ($("#SPNO").val() == "")
         {
-            var dropdown = document.getElementById("myDropdown");
+            var dropdown = document.getElementById("txtTypeID");
             var options = dropdown.getElementsByTagName("option");
 
             for (var i = 0; i < options.length; i++) {
